# enpaf

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
companion/: enpaf.json  main.py
companion/app/: index.html
companion/app/css/: style.css
companion/app/js/: app.js
enpaf/: __init__.py
enpaf/android/: __init__.py  audio.py  battery.py  biometric.py  bluetooth.py  deeplinks.py  device.py  features.py  location.py  manager.py  media.py  nfc.py  notifications.py  permissions.py  runtime.py  sensors.py  webview.py  wifi.py
enpaf/builder/: __init__.py  apk_builder.py  project_generator.py
enpaf/cli/: __init__.py  main.py  ui.py
enpaf/cli/commands/: __init__.py  build.py  create.py  doctor.py  run.py  serve.py
enpaf/core/: __init__.py  api.py  app.py  bridge.py  config_panel.py  events.py  router.py  server.py  storage.py
enpaf/template/: enpaf.json  main.py
enpaf/template/app/: index.html
enpaf/template/app/css/: style.css
enpaf/template/app/js/: app.js
enpaf/template/app/pages/: about.html
enpaf_bridge/: __init__.py  enpaf.js
site/: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  nginx.conf.example  robots.txt  server.py  site.webmanifest  sitemap.xml
site/assets/: app.js  style.css
testapp/: enpaf.json  main.py
testapp/app/: index.html
testapp/app/css/: style.css
testapp/app/js/: app.js
tests/: conftest.py  test_api.py  test_app.py  test_bridge.py  test_build.py  test_cli.py  test_events.py  test_modules.py  test_packaging.py  test_router.py  test_server.py  test_storage.py
