[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enpaf"
version = "1.1.0"
description = "ENPAF — Python + Web framework for building Android APK applications"
readme = "README.md"
license = {text = "PolyForm Noncommercial License 1.0.0"}
requires-python = ">=3.9"
authors = [
    {name = "ENPAF Team"}
]
keywords = ["android", "apk", "python", "webview", "framework", "mobile"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Free for non-commercial use",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "bottle>=0.12.25",
    "Jinja2>=3.1.3",
    "watchdog>=4.0.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "qrcode>=7.4.2",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "simple-websocket>=1.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = ["build>=1.0.0", "twine>=5.0.0"]
test = ["pytest>=7.0.0"]

[project.scripts]
paf = "enpaf.cli.main:main"

[project.urls]
Homepage = "https://github.com/enpaf/enpaf"
Documentation = "https://enpaf.dev"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["enpaf*", "enpaf_bridge*"]

[tool.setuptools.package-data]
enpaf = [
    "template/**/*",
    "template/**/.*",
    "builder/templates/*",
]
enpaf_bridge = ["*.js"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
